# unified-audio-hs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  unified-audio-hs.cabal
app/: Main.hs  Mock.hs
sounds/: exampleFile.flac
src/: MyLib.hs
src-core/: Audio.hs  Interface.hs
src-core/UnifiedAudio/: Effectful.hs  Mock.hs
src-impl/Fmod/: Backend.hs  Fmod.hs  Raw.hs  Result.hs  Safe.hs
src-impl/Fmod/csrc/: fmod_mem.c
src-impl/SDL/: Backend.hs  SDL.hs
src/Audio/: Fmod.hs  Interface.hs  SDL.hs
test/: Main.hs  TP.hs
