cabal-version:      3.0
-- The name of the package.
name:               unified-audio-hs

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             Christoph Hofer

maintainer:         117508@fhwn.ac.at

category:           Game
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall
    default-extensions: OverloadedRecordDot

library
    import:           warnings

    exposed-modules:  UnifiedAudio.Effectful,
                      UnifiedAudio.Mock

    build-depends:    base ^>=4.18.3.0,
                      effectful,
                      effectful-core >= 2.0 && <2.3,
                      bytestring

    hs-source-dirs:   src-core/

    -- Base language which the package is written in.
    default-language: Haskell2010

library sdl-impl
    import:           warnings

    exposed-modules:  SDL.Backend

    visibility:       public

    -- other-modules:

    build-depends:    base,
                      unified-audio-hs,
                      sdl2,
                      sdl2-mixer,
                      effectful-core >= 2.0 && <2.3,
                      containers


    -- Directories containing source files.
    hs-source-dirs:   src-impl/

    -- Base language which the package is written in.
    default-language: Haskell2010

library fmod-impl
    import:           warnings

    exposed-modules:  Fmod.Backend,
                      Fmod.Result,
                      Fmod.Raw,
                      Fmod.Safe

    c-sources:        src-impl/Fmod/csrc/fmod_mem.c

    include-dirs:     /home/chris/unified-audio-hs/unified-audio-hs/fmod/inc
    
    visibility:       public

    build-depends:    base, 
                      effectful-core >= 2.0 && <2.3,
                      unified-audio-hs,
                      containers,
                      bytestring

    -- Directories containing source files.
    hs-source-dirs:   src-impl/

    -- Base language which the package is written in.
    default-language: Haskell2010

    extra-lib-dirs:    /home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
    extra-libraries:   fmod
    ghc-options:       -optl-Wl,-rpath=/home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/


executable unified-audio-hs
    -- Import common warning flags.
    import:           warnings

  
    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base,
        unified-audio-hs,
        unified-audio-hs:sdl-impl,
        unified-audio-hs:fmod-impl,
        effectful,
        effectful-plugin,
        effectful-core,
        bytestring

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

    extra-lib-dirs:    /home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
    extra-libraries:   fmod
    ghc-options:       -optl-Wl,-rpath=/home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
                       -fplugin=Effectful.Plugin

test-suite unified-audio-hs-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.18.3.0,
        unified-audio-hs
