cabal-version:      3.0
name:               unified-audio-hs

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             Christoph Hofer

maintainer:         117508@fhwn.ac.at

category:           Game
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded
    default-extensions: OverloadedRecordDot

library
    import:           warnings

    exposed-modules:  UnifiedAudio.Effectful,

    build-depends:    base ^>=4.18.3.0,
                      effectful,
                      effectful-core >= 2.0 && <2.3,
                      bytestring

    hs-source-dirs:   src-core/

    -- Base language which the package is written in.
    default-language: Haskell2010

library sdl-impl
    import:           warnings

    exposed-modules:  SDL.Backend

    visibility:       public

    -- other-modules:

    build-depends:    base,
                      unified-audio-hs,
                      sdl2,
                      sdl2-mixer,
                      effectful-core >= 2.0 && <2.3,
                      containers


    -- Directories containing source files.
    hs-source-dirs:   src-impl/

    -- Base language which the package is written in.
    default-language: Haskell2010

library fmod-impl
    import:           warnings

    exposed-modules:  Fmod.Backend,
                      Fmod.Result,
                      Fmod.Raw,
                      Fmod.Safe

    c-sources:        src-impl/Fmod/csrc/fmod_mem.c

    include-dirs:     /home/chris/unified-audio-hs/unified-audio-hs/fmod/inc
    
    visibility:       public

    build-depends:    base, 
                      effectful-core >= 2.0 && <2.3,
                      unified-audio-hs,
                      containers,
                      bytestring

    -- Directories containing source files.
    hs-source-dirs:   src-impl/

    -- Base language which the package is written in.
    default-language: Haskell2010

    extra-lib-dirs:    /home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
    extra-libraries:   fmod
    ghc-options:       -optl-Wl,-rpath=/home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/


executable unified-audio-hs
    import:           warnings

  
    main-is:          Main.hs

    build-depends:
        base,
        unified-audio-hs,
        unified-audio-hs:sdl-impl,
        unified-audio-hs:fmod-impl,
        effectful,
        effectful-plugin,
        effectful-core,
        bytestring

    hs-source-dirs:   app

    default-language: Haskell2010

    extra-lib-dirs:    /home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
    extra-libraries:   fmod
    ghc-options:       -optl-Wl,-rpath=/home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
                       -fplugin=Effectful.Plugin

test-suite tp-tests
  type:                exitcode-stdio-1.0
  default-language:    GHC2021
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       TP

  build-depends:       base >= 4.14 && < 5
                     , hspec >= 2.10
                     , effectful
                     , effectful-core
                     , unified-audio-hs
                     , effectful-plugin
                     , unified-audio-hs:sdl-impl
                     , unified-audio-hs:fmod-impl

  extra-lib-dirs:    /home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
  extra-libraries:   fmod
  ghc-options:       -optl-Wl,-rpath=/home/chris/unified-audio-hs/unified-audio-hs/fmod/lib/x86_64/
                      -fplugin=Effectful.Plugin
